# robot-sink

./: .gitignore  AGENTS.md  README.md  journal_2026-02-15.md  sync_bb.sh  sync_nodes.sh
beaglebone/: README.md
beaglebone/docs/: bringup.md  sabertooth_setup.md  troubleshooting.md  wiring_and_pins.md
beaglebone/host_daemon/: bbb_base_daemon.py  config.yaml  hw.py  protocol.py  safety.py  uio_layout.py  uio_transport.py
beaglebone/overlays/: BB-PRU-RPROC-IRQ-FIX.dts
beaglebone/pru_fw/: Makefile
beaglebone/scripts/: build_pru.sh  deploy_firmware.sh  (+6 more)
docs/: README.md  jetson.md
jetson/: README.md
journal/: 2026-02-13.md  2026-02-19.md  2026-02-28-camera-stream-refresh-and-sync-rollback.md  2026-02-28-tf-odom-bounce.md  2026-02-28-toy-shoe-i0-console-and-cvat.md
ros_ws/src/base_bringup/: package.xml  setup.py
ros_ws/src/base_bringup/base_bringup/: __init__.py  bbb_odom_tf_bridge.py
ros_ws/src/base_bringup/config/: base_bringup.yaml
ros_ws/src/base_bringup/launch/: base_tf.launch.py
ros_ws/src/base_bringup/resource/: base_bringup
ros_ws/src/perception/toy_shoe_perception/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/perception/toy_shoe_perception/config/: inference_i0.yaml
ros_ws/src/perception/toy_shoe_perception/launch/: toy_shoe_i0.launch.py
ros_ws/src/perception/toy_shoe_perception/scripts/: evaluate_toy_shoe.py  export_tensorrt.py  extract_rosbag_images.py  import_cvat_ultralytics_yolo.py  mine_hard_frames.py  prepare_dataset_split.py  train_yolo.py
ros_ws/src/perception/toy_shoe_perception/test/: test_critical_metric.py  test_extract_determinism.py  test_split_no_leakage.py
ros_ws/src/perception/toy_shoe_perception/toy_shoe_perception/: __init__.py  safety_gate_node.py  trt_detector_node.py
(+101 files in other folders)
