<?xml version="1.0"?>
<package format="3">
  <name>toy_shoe_perception</name>
  <version>0.1.0</version>
  <description>Toy-vs-shoe Iteration-0 perception pipeline and ROS 2 runtime nodes.</description>
  <maintainer email="robot@localhost">robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
